fix main header alignment

--- a/challenge-react/public/css/main.css
+++ b/challenge-react/public/css/main.css
@@ -88,6 +88,9 @@
 .mainHeader {
   width: 100%;
   margin-bottom: var(--basicMargin);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .headerTitle {
